tests/exceptions/ill-typed/exception-type-not-declared-throw.stella
language core;

extend with #exceptions, #exception-type-declaration, #variants;

fn main(n : Nat) -> Bool {
    return throw(<| good = true |>)
}
